@@ -13,9 +13,19 @@ distributed data store.
 1. Start the Spring Boot application, which will also start an embedded
    Ignite node:
 
-   ```bash
-   mvn spring-boot:run
-   ```
+
+   mvn spring-boot:run -Dspring-boot.run.jvmArguments="\
+   --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED \
+   --add-opens=java.base/java.nio=ALL-UNNAMED \
+   --add-opens=java.base/sun.nio.ch=ALL-UNNAMED \
+   --add-opens=java.base/java.lang=ALL-UNNAMED \
+   --add-opens=java.base/java.lang.invoke=ALL-UNNAMED \
+   --add-opens=java.base/java.util=ALL-UNNAMED \
+   --add-opens=java.base/java.util.concurrent=ALL-UNNAMED \
+   --add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED \
+   --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED \
+   -Djava.net.preferIPv4Stack=true \
+   -Xms512m -Xmx512m"
 
 2. Reserve a seat by calling the REST endpoint. Example using `curl`:
 
